@@ -19,15 +19,15 @@ import java.util.HashMap;
 import java.util.UUID;
 
 public class BaseAPI extends Token {
-    protected static final Logger LOGGER = LogManager.getLogger(BaseAPI.class);
+    private static final Logger LOGGER = LogManager.getLogger(BaseAPI.class);
 
-    protected static EnvironmentType env = EnvironmentType.getEnum(Properties.get("env", true));
+    protected static final EnvironmentType env = EnvironmentType.getEnum(Properties.get("env", true));
 
-    static Headers headers = new Headers();
+    private static final Headers headers = new Headers();
 
     public synchronized String adminJWT() throws HttpException {
-        String adminUser = SecretsManager.getSecretValue("adminUser");
-        String adminPassword = SecretsManager.getSecretValue("adminPassword");
+        var adminUser = SecretsManager.getSecretValue("adminUser");
+        var adminPassword = SecretsManager.getSecretValue("adminPassword");
 
         if (getAdminToken() == null || isTokenExpired(getAdminToken())) {
             LOGGER.info("Generating new admin token");
@@ -41,10 +41,10 @@ public class BaseAPI extends Token {
 
     private boolean isTokenExpired(String token) {
         try {
-            DecodedJWT decodedJWT = JWT.decode(token);
+            var decodedJWT = JWT.decode(token);
             return decodedJWT.getExpiresAt().before(new Date());
         } catch (JWTDecodeException e) {
-            LOGGER.error("Error decoding token: " + e.getMessage());
+            LOGGER.error("Error decoding token: {}", e.getMessage());
             return true;
         }
     }
@@ -56,30 +56,30 @@ public class BaseAPI extends Token {
     public synchronized HashMap<String, String> header(String requestId) throws HttpException {
         headers.getApiHeader().put("Authorization", "Bearer " + adminJWT());
         logApiCall(requestId, "header", "Authorization header set.");
-        return (HashMap<String, String>) headers.getApiHeader();
+        return new HashMap<>(headers.getApiHeader());
     }
 
     public synchronized String fetchApplicationInformation(String applicationNumber, String jsonPath, String defaultReturn) throws HttpException {
-        String requestId = UUID.randomUUID().toString();
-        String url = URL.build(env, String.format("application/%s/overview/", applicationNumber)).toString();
+        var requestId = UUID.randomUUID().toString();
+        var url = URL.build(env, "application/%s/overview/".formatted(applicationNumber)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String fetchTMApplicationInformation(String applicationNumber, String jsonPath, String defaultReturn) throws HttpException {
-        String requestId = UUID.randomUUID().toString();
-        String url = URL.build(env, String.format("transport-manager-application/%s", applicationNumber)).toString();
+        var requestId = UUID.randomUUID().toString();
+        var url = URL.build(env, "transport-manager-application/%s".formatted(applicationNumber)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String fetchInternalUserInformation(String userId, String jsonPath, String defaultReturn) throws HttpException {
-        String requestId = UUID.randomUUID().toString();
-        String url = URL.build(env, String.format("user/internal/%s", userId)).toString();
+        var requestId = UUID.randomUUID().toString();
+        var url = URL.build(env, "user/internal/%s".formatted(userId)).toString();
         return retrieveAPIData(url, jsonPath, defaultReturn, requestId);
     }
 
     public synchronized String retrieveAPIData(String url, String jsonPath, String defaultReturn, String requestId) throws HttpException {
         headers.getApiHeader().put("Authorization", "Bearer " + adminJWT());
-        ValidatableResponse response = RestUtils.get(url, headers.getApiHeader());
+        var response = RestUtils.get(url, headers.getApiHeader());
 
         try {
             return response.extract().response().jsonPath().getString(jsonPath);
